import "yt/yt_proto/yt/formats/extension.proto";

message TInputMessage {
    optional bytes _ReadSchema = 1 [(NYT.column_name) = "_read_schema", (NYT.flags) = ANY];
    optional bytes _ReadSchemaAttributes = 2 [(NYT.column_name) = "_read_schema_attributes", (NYT.flags) = ANY];
    optional string _YqlReadUdf = 3 [(NYT.column_name) = "_yql_read_udf"];
    optional bytes _YqlRowSpec = 4 [(NYT.column_name) = "_yql_row_spec", (NYT.flags) = ANY];
    optional bytes _YqlRowSpecAttributes = 5 [(NYT.column_name) = "_yql_row_spec_attributes", (NYT.flags) = ANY];
    required string AccessTime = 6 [(NYT.column_name) = "access_time"];
    required string Account = 7 [(NYT.column_name) = "account"];
    optional bytes Acl = 8 [(NYT.column_name) = "acl", (NYT.flags) = ANY];
    optional bytes ChildrenHeld = 9 [(NYT.column_name) = "children_held", (NYT.flags) = ANY];
    optional int64 ChunkCount = 10 [(NYT.column_name) = "chunk_count"];
    optional string ChunkFormat = 11 [(NYT.column_name) = "chunk_format"];
    optional int64 ChunkRowCount = 12 [(NYT.column_name) = "chunk_row_count"];
    optional int64 CompressedDataSize = 13 [(NYT.column_name) = "compressed_data_size"];
    optional string CompressionCodec = 14 [(NYT.column_name) = "compression_codec"];
    required string CreationTime = 15 [(NYT.column_name) = "creation_time"];
    optional string CypressTransactionId = 16 [(NYT.column_name) = "cypress_transaction_id"];
    optional bytes CypressTransactionTimestamp = 17 [(NYT.column_name) = "cypress_transaction_timestamp", (NYT.flags) = ANY];
    optional string CypressTransactionTitle = 18 [(NYT.column_name) = "cypress_transaction_title"];
    optional int64 DataWeight = 19 [(NYT.column_name) = "data_weight"];
    optional bytes Dynamic = 20 [(NYT.column_name) = "dynamic", (NYT.flags) = ANY];
    optional string ErasureCodec = 21 [(NYT.column_name) = "erasure_codec"];
    required bool External = 22 [(NYT.column_name) = "external"];
    required string Id = 23 [(NYT.column_name) = "id"];
    optional string InMemoryMode = 24 [(NYT.column_name) = "in_memory_mode"];
    required bool InheritAcl = 25 [(NYT.column_name) = "inherit_acl"];
    optional bytes Media = 26 [(NYT.column_name) = "media", (NYT.flags) = ANY];
    required string ModificationTime = 27 [(NYT.column_name) = "modification_time"];
    optional bytes MonitorTableStatistics = 28 [(NYT.column_name) = "monitor_table_statistics", (NYT.flags) = ANY];
    optional bytes NightlyCompressionSettings = 29 [(NYT.column_name) = "nightly_compression_settings", (NYT.flags) = ANY];
    optional string OptimizeFor = 30 [(NYT.column_name) = "optimize_for"];
    optional string OriginatorCypressTransactionId = 31 [(NYT.column_name) = "originator_cypress_transaction_id"];
    optional bool Orphaned = 32 [(NYT.column_name) = "orphaned"];
    optional string Owner = 33 [(NYT.column_name) = "owner"];
    optional string ParentId = 34 [(NYT.column_name) = "parent_id"];
    required string Path = 35 [(NYT.column_name) = "path"];
    optional string PrimaryMedium = 36 [(NYT.column_name) = "primary_medium"];
    required int64 RefCounter = 37 [(NYT.column_name) = "ref_counter"];
    optional int64 ReplicationFactor = 38 [(NYT.column_name) = "replication_factor"];
    optional bytes ResourceUsage = 39 [(NYT.column_name) = "resource_usage", (NYT.flags) = ANY];
    optional uint64 Revision = 40 [(NYT.column_name) = "revision"];
    optional int64 RowCount = 41 [(NYT.column_name) = "row_count"];
    optional bytes Schema = 42 [(NYT.column_name) = "schema", (NYT.flags) = ANY];
    optional bytes SchemaAttributes = 43 [(NYT.column_name) = "schema_attributes", (NYT.flags) = ANY];
    optional string SchemaMode = 44 [(NYT.column_name) = "schema_mode"];
    optional bytes Sorted = 45 [(NYT.column_name) = "sorted", (NYT.flags) = ANY];
    optional string TabletCellBundle = 46 [(NYT.column_name) = "tablet_cell_bundle"];
    optional string TargetPath = 47 [(NYT.column_name) = "target_path"];
    required string Type = 48 [(NYT.column_name) = "type"];
    optional int64 UncompressedDataSize = 49 [(NYT.column_name) = "uncompressed_data_size"];
    optional bytes UserAttributeKeys = 50 [(NYT.column_name) = "user_attribute_keys", (NYT.flags) = ANY];
    optional bytes VersionedResourceUsage = 51 [(NYT.column_name) = "versioned_resource_usage", (NYT.flags) = ANY];
}

message TOutputMessage {
    required string Account = 1 [(NYT.column_name) = "account"];
    required int64 Depth = 19 [(NYT.column_name) = "depth"];
    required string Path = 2 [(NYT.column_name) = "path"];
    required string Type = 16 [(NYT.column_name) = "type"];
    optional int64 CreationTime = 13 [(NYT.column_name) = "creation_time"];
    optional int64 ModificationTime = 12 [(NYT.column_name) = "modification_time"];
    optional int64 AccessTime = 11 [(NYT.column_name) = "access_time"];
    optional int64 ChunkCount = 3 [(NYT.column_name) = "chunk_count"];
    optional int64 DiskSpace = 4 [(NYT.column_name) = "disk_space"];
    optional int64 MasterMemory = 5 [(NYT.column_name) = "master_memory"];
    optional int64 NodeCount = 6 [(NYT.column_name) = "node_count"];
    optional int64 TabletCount = 7 [(NYT.column_name) = "tablet_count"];
    optional int64 TabletStaticMemory = 8 [(NYT.column_name) = "tablet_static_memory"];
    optional int64 DirectChildCount = 9 [(NYT.column_name) = "direct_child_count"];
    optional int64 ChunkHostCellMasterMemory = 37 [(NYT.column_name) = "chunk_host_cell_master_memory"];
    optional bytes ResourceUsage = 29 [(NYT.column_name) = "resource_usage", (NYT.flags) = ANY];
    optional bytes RecursiveVersionedResourceUsage = 10 [(NYT.column_name) = "recursive_versioned_resource_usage", (NYT.flags) = ANY];
    optional bool Dynamic = 14 [(NYT.column_name) = "dynamic"];
    optional string Owner = 15 [(NYT.column_name) = "owner"];
    optional string PrimaryMedium = 17 [(NYT.column_name) = "primary_medium"];
    optional int64 ApproximateRowCount = 18 [(NYT.column_name) = "approximate_row_count"];
    optional bool PathPatched = 20 [(NYT.column_name) = "path_patched"];
    optional bytes VersionedResourceUsage = 30 [(NYT.column_name) = "versioned_resource_usage", (NYT.flags) = ANY];
    optional int64 VersionedChunkCount = 21 [(NYT.column_name) = "versioned:chunk_count"];
    optional int64 VersionedDiskSpace = 22 [(NYT.column_name) = "versioned:disk_space"];
    optional int64 VersionedMasterMemory = 23 [(NYT.column_name) = "versioned:master_memory"];
    optional int64 VersionedNodeCount = 24 [(NYT.column_name) = "versioned:node_count"];
    optional int64 VersionedTabletCount = 25 [(NYT.column_name) = "versioned:tablet_count"];
    optional int64 VersionedTabletStaticMemory = 26 [(NYT.column_name) = "versioned:tablet_static_memory"];
    optional int64 VersionedDirectChildCount = 27 [(NYT.column_name) = "versioned:direct_child_count"];
    optional bytes VersionedRecursiveVersionedResourceUsage = 28 [(NYT.column_name) = "versioned:recursive_versioned_resource_usage", (NYT.flags) = ANY];
    optional int64 VersionedCompressedDataSize = 31 [(NYT.column_name) = "versioned:compressed_data_size"];
    optional int64 VersionedDataWeight = 32 [(NYT.column_name) = "versioned:data_weight"];
    optional int64 VersionedErasureDiskSpace = 33 [(NYT.column_name) = "versioned:erasure_disk_space"];
    optional int64 VersionedRegularDiskSpace = 34 [(NYT.column_name) = "versioned:regular_disk_space"];
    optional int64 VersionedRowCount = 35 [(NYT.column_name) = "versioned:row_count"];
    optional int64 VersionedUncompressedDataSize = 36 [(NYT.column_name) = "versioned:uncompressed_data_size"];
    optional bytes OtherColumns = 38 [(NYT.flags) = OTHER_COLUMNS];
}
